tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@component_default_non_literal_in_map.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/component_default_non_literal_in_map.txt
---
error: Invalid default argument: this map should only contain literal values.
 --> component_default_non_literal_in_map.txt:1:26
  |
1 | {% component array(array={"hello": a}) %}{% endcomponent %}
  |                          ^^^^^^^^^^^^
